src/rust/items/snapshots/syn_state_machine__rust__items__enumerations__tests__concat_idents! (parse it_matches_enum_item_tuple).snap
---
source: src/rust/items/enumerations.rs
expression: "crate::parse::<EnumItem<P<Infallible>, Ident, P<Infallible>>>(q.clone())"
---
Ok(
    Tuple(
        Rep(
            [],
        ),
        None,
        Ident(
            Block,
        ),
        Paren(
            Interlace {
                values: [
                    TupleField {
                        attrs: Rep(
                            [],
                        ),
                        vis: None,
                        ty: Ident(
                            World,
                        ),
                    },
                ],
            },
            Span,
        ),
        None,
    ),
)
