src/rust/items/snapshots/syn_state_machine__rust__items__enumerations__tests__concat_idents! (parse it_matches_enum_item_unit).snap
---
source: src/rust/items/enumerations.rs
expression: "crate::parse::<EnumItem<Infallible, Ident, Infallible>>(q.clone())"
---
Ok(
    Unit(
        Rep(
            [],
        ),
        None,
        Ident(
            Block,
        ),
        None,
    ),
)
