src/rust/items/snapshots/syn_state_machine__rust__items__enumerations__tests__it_matches_enum.snap
---
source: src/rust/items/enumerations.rs
expression: "insta_match_test!(+ parse Enumeration<Infallible, TypePath<Ident>, Infallible>\n    : enum HelloWorld < F, T > where { Unit, From(F), To { result : T }, })"
---
Ok(
    Enumeration {
        id: Ident(
            HelloWorld,
        ),
        generic_params: Some(
            GenericParams {
                params: Interlace {
                    values: [
                        Ty(
                            [],
                            TypeParam {
                                id: Ident(
                                    F,
                                ),
                                bound: None,
                                ty: None,
                            },
                        ),
                        Ty(
                            [],
                            TypeParam {
                                id: Ident(
                                    T,
                                ),
                                bound: None,
                                ty: None,
                            },
                        ),
                    ],
                },
            },
        ),
        where_clause: Some(
            WhereClause {
                content: Interlace {
                    values: [],
                },
            },
        ),
        items: [
            Interlace {
                values: [
                    Unit(
                        [],
                        None,
                        Ident(
                            Unit,
                        ),
                        None,
                    ),
                    Tuple(
                        [],
                        None,
                        Ident(
                            From,
                        ),
                        Paren(
                            Interlace {
                                values: [
                                    TupleField {
                                        attrs: [],
                                        vis: None,
                                        ty: HigherOrderPath {
                                            leading: false,
                                            segments: Interlace {
                                                values: [
                                                    Bare(
                                                        Id(
                                                            Ident(
                                                                F,
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                            },
                                        },
                                    },
                                ],
                            },
                            Span,
                        ),
                        None,
                    ),
                    Struct(
                        [],
                        None,
                        Ident(
                            To,
                        ),
                        Brace(
                            Interlace {
                                values: [
                                    StructField {
                                        attrs: [],
                                        vis: None,
                                        id: Ident(
                                            result,
                                        ),
                                        ty: HigherOrderPath {
                                            leading: false,
                                            segments: Interlace {
                                                values: [
                                                    Bare(
                                                        Id(
                                                            Ident(
                                                                T,
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                            },
                                        },
                                    },
                                ],
                            },
                            Span,
                        ),
                        None,
                    ),
                ],
            },
        ],
    },
)
