src/rust/items/snapshots/syn_state_machine__rust__items__enumerations__tests__it_matches_enum_item_struct.snap
---
source: src/rust/items/enumerations.rs
expression: "insta_match_test!(+ parse EnumItem<Infallible, Ident, Infallible> : Block\n    { hello : World })"
---
Ok(
    Struct(
        [],
        None,
        Ident(
            Block,
        ),
        Brace(
            Interlace {
                values: [
                    StructField {
                        attrs: [],
                        vis: None,
                        id: Ident(
                            hello,
                        ),
                        ty: Ident(
                            World,
                        ),
                    },
                ],
            },
            Span,
        ),
        None,
    ),
)
