src/rust/items/snapshots/syn_state_machine__rust__items__enumerations__tests__it_matches_enum_item_tuple.snap
---
source: src/rust/items/enumerations.rs
expression: "insta_match_test!(+ parse EnumItem<Infallible, Ident, Infallible> :\n    Block(World))"
---
Ok(
    Tuple(
        [],
        None,
        Ident(
            Block,
        ),
        Paren(
            Interlace {
                values: [
                    TupleField {
                        attrs: [],
                        vis: None,
                        ty: Ident(
                            World,
                        ),
                    },
                ],
            },
            Span,
        ),
        None,
    ),
)
