src/rust/items/snapshots/syn_state_machine__rust__items__enumerations__tests__it_matches_enum_item_unit.snap
---
source: src/rust/items/enumerations.rs
expression: "insta_match_test!(+ parse EnumItem<Infallible, Ident, Infallible> : Block)"
---
Ok(
    Unit(
        Rep(
            [],
        ),
        None,
        Ident(
            Block,
        ),
        None,
    ),
)
